# jupyterlab-cli

./: .gitignore  README.md  SKILL.md  install.json  package.json  pyproject.toml  tsconfig.json
jupyter-config/jupyter_server_config.d/: jupyter_cli_extension.json  jupyterlab_cli_extension.json
jupyter_cli/: __init__.py  cli.py  client.py  config.py
jupyter_cli_extension/: __init__.py  extension.py  frontend_bridge.py  kernel_ops.py  routes.py  session_state.py
jupyterlab_cli/: __init__.py  cli.py  client.py  config.py  output.py
jupyterlab_cli_extension/: __init__.py  extension.py  frontend_bridge.py  kernel_ops.py  lock.py  notebook_utils.py  routes.py  session_state.py
schema/: clipboard-image.json  copy-on-select.json
src/: bridge.ts  clipboard-image.ts  copy-context.ts  copy-on-select.ts  index.ts
style/: base.css  index.css
