[build-system]
requires = ["hatchling>=1.21", "jupyterlab>=4.0.0,<5", "hatch-jupyter-builder>=0.9"]
build-backend = "hatchling.build"

[project]
name = "jupyter-cli"
version = "0.1.0"
description = "CLI and JupyterLab extension for AI agents to manage notebooks over HTTP"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Wenmin Wu", email = "wuwenmin1991@gmail.com" }]
keywords = ["jupyter", "jupyterlab", "jupyter-server", "notebook", "cli", "agent"]
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "click>=8.1",
  "jupyter_server>=2.0,<3",
  "nbformat>=5.9",
  "requests>=2.28",
  "rich>=13.0",
  "tornado>=6.2",
  "traitlets>=5.0",
]

[project.urls]
Homepage = "https://github.com/wenmin-wu/jupyter-cli"
Repository = "https://github.com/wenmin-wu/jupyter-cli"
Documentation = "https://github.com/wenmin-wu/jupyter-cli#readme"
Issues = "https://github.com/wenmin-wu/jupyter-cli/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
jupyter-cli = "jupyter_cli.cli:main"

[project.entry-points."jupyter_server_extension"]
jupyter_cli_extension = "jupyter_cli_extension:_jupyter_server_extension_points"

[tool.hatch.build]
include = [
  "jupyter_cli/**/*.py",
  "jupyter_cli_extension/**/*.py",
  "jupyter-config/**/*.json",
  "install.json",
  "package.json",
  "yarn.lock",
  ".yarnrc.yml",
  "tsconfig.json",
  "src/**/*",
  "schema/**/*",
  "style/**/*",
]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter-config/jupyter_server_config.d" = "etc/jupyter/jupyter_server_config.d"
"jupyter_cli_extension/labextension" = "share/jupyter/labextensions/jupyter-cli-frontend"
"install.json" = "share/jupyter/labextensions/jupyter-cli-frontend/install.json"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.9"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
  "jupyter_cli_extension/labextension/static/style.js",
  "jupyter_cli_extension/labextension/package.json",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyter_cli_extension/labextension"
